--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: 'Upload test results'
         uses: actions/upload-artifact@v2
         # Disabled when running locally with the nektos/act tool
-        if: ${{ always() && !env.ACT }}
+        if: ${{ always() }}
         with:
           name: test-results
           path: ./src/mochawesome-report
