--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,7 +1,7 @@
 # ==================================================================
-# Enable App Insights integration
+# Enable reporting metrics and data to App Insights
 # ==================================================================
-#APPINSIGHTS_INSTRUMENTATIONKEY=
+#APPLICATIONINSIGHTS_CONNECTION_STRING=
 
 # ==================================================================
 # Enable Todo mini app 
