--- a/deploy/kubernetes/aks-live.yaml
+++ b/deploy/kubernetes/aks-live.yaml
@@ -12,14 +12,14 @@ secretEnv:
   AAD_APP_SECRET:
     secretName: nodejs-demoapp
     secretKey: aadAppSecret
-  TODO_MONGO_CONNSTR:
-    secretName: nodejs-demoapp
-    secretKey: mongoConnString
+  # TODO_MONGO_CONNSTR:
+  #   secretName: nodejs-demoapp
+  #   secretKey: mongoConnString
 
 env:
-  APPINSIGHTS_INSTRUMENTATIONKEY: 45f5a949-518c-4216-80bd-6c5632a9342c
-  AAD_APP_ID: 79a5ae6e-58ea-4114-8c42-1fd260b9549c
-  TODO_MONGO_DB: shared
+#   APPINSIGHTS_INSTRUMENTATIONKEY: 45f5a949-518c-4216-80bd-6c5632a9342c
+  AAD_APP_ID: 1166f1b5-d851-4b71-9c5c-89bf6b43b6e3
+#   TODO_MONGO_DB: shared
 
 resources:
   limits:
