--- a/src/.env.sample
+++ b/src/.env.sample
@@ -15,7 +15,7 @@
 #WEATHER_API_KEY=
 
 # ==================================================================
-# Enable AAD auth, if AAD_APP_ID is set, then so must other vars
+# Enable AAD auth, if AAD_APP_ID is set
 # ==================================================================
 #AAD_APP_ID=
-#AAD_APP_SECRET=
+
