--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "mocha": "^10.0.0",
     "mochawesome": "^7.1.3",
     "newman": "^5.3.2",
