--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
   "description": "Node.js Express app for demos",
-  "version": "4.9.5",
+  "version": "4.9.6",
   "author": "Ben Coleman",
   "engines": {
     "node": ">=16.0.0"
@@ -26,6 +26,7 @@
     "@azure/msal-node": "^1.14.0",
     "applicationinsights": "^2.3.4",
     "axios": "^0.27.2",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
@@ -33,7 +34,8 @@
     "express-prometheus-middleware": "^1.2.0",
     "express-session": "^1.17.3",
     "mongodb": "^4.9.1",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "redis": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
