--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
   "description": "Node.js Express app for demos",
-  "version": "4.9.6",
+  "version": "4.9.7",
   "author": "Ben Coleman",
   "engines": {
     "node": ">=16.0.0"
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "node --expose_gc server.mjs",
     "start-bg": "node server.mjs &",
-    "watch": "nodemon --experimental-modules",
+    "watch": "nodemon --trace-deprecation --experimental-modules",
     "test-report": "mocha --reporter mochawesome --exit ./tests > test-results.json",
     "test": "mocha --exit ./tests",
     "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
@@ -23,8 +23,8 @@
     "lint-fix": "eslint . --ext mjs --fix && prettier --write **/*.mjs"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.14.0",
-    "applicationinsights": "^2.3.4",
+    "@azure/msal-node": "^1.14.1",
+    "applicationinsights": "^2.3.5",
     "axios": "^0.27.2",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
