Switch from Azure AD to Entra

--- a/deploy/kubernetes/aks-live.yaml
+++ b/deploy/kubernetes/aks-live.yaml
@@ -14,10 +14,10 @@ secretEnv:
     secretKey: weatherKey
 
 env:
-  AAD_APP_ID: 129e29d2-6c0a-4dbf-849e-320a3aa93d52
+  ENTRA_APP_ID: 129e29d2-6c0a-4dbf-849e-320a3aa93d52
   APPINSIGHTS_CONNECTION_STRING: 'InstrumentationKey=76ae0e4d-5b1f-4081-915a-34cd49c8c4c2;IngestionEndpoint=https://uksouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://uksouth.livediagnostics.monitor.azure.com/'
   REDIS_SESSION_HOST: redis
-  
+
 resources:
   limits:
     cpu: 500m
