--- a/src/.env.sample
+++ b/src/.env.sample
@@ -15,7 +15,7 @@
 #WEATHER_API_KEY=
 
 # ==================================================================
-# Enable AAD auth, if AAD_APP_ID is set
+# Enable Azure & EntraID auth, if ENTRA_APP_ID is set
 # ==================================================================
-#AAD_APP_ID=
+#ENTRA_APP_ID=
 
