--- a/src/package.json
+++ b/src/package.json
@@ -15,10 +15,9 @@
   "scripts": {
     "start": "node --expose_gc server.mjs",
     "start-bg": "node server.mjs &",
-    "watch": "nodemon --trace-deprecation --experimental-modules",
-    "test-report": "mocha --reporter mochawesome --exit ./tests > test-results.json",
-    "test": "mocha --exit ./tests",
-    "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
+    "watch": "nodemon",
+    "test-report": "httpyac tests/base-tests.http --all --junit > test-results.xml",
+    "test": "httpyac tests/base-tests.http --all --output short",
     "lint": "eslint . && prettier --check **/*.mjs",
     "lint-fix": "eslint . --fix && prettier --write **/*.mjs"
   },
@@ -40,11 +39,8 @@
   "devDependencies": {
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "mocha": "^10.0.0",
-    "mochawesome": "^7.1.3",
-    "newman": "^5.3.2",
+    "httpyac": "^6.15.1",
     "nodemon": "^2.0.19",
-    "prettier": "^3.3.3",
-    "supertest": "^6.2.4"
+    "prettier": "^3.3.3"
   }
 }
