--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -23,7 +23,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
 
       - name: 'Run linting'
         run: make lint
@@ -33,7 +37,7 @@ jobs:
 
       - name: 'Run tests'
         run: |
-          sleep 10
+          sleep 5
           make test-report
 
       - name: 'Test reporting'
@@ -41,7 +45,7 @@ jobs:
         id: test-report
         if: success() || failure()
         with:
-          name: Unit Test Report
+          name: Integration Test Report
           path: test-results.xml
           reporter: java-junit
           fail-on-error: false
@@ -50,9 +54,10 @@ jobs:
     name: 'Build & push image'
     needs: test
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Nicer than using github runid, I think, will be picked up automatically by make
       - name: 'Create datestamp image tag'
@@ -63,7 +68,6 @@ jobs:
 
       # Only when pushing to default branch (e.g. master or main), then push image to registry
       - name: 'Push to container registry'
-        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login $IMAGE_REG -u $GITHUB_ACTOR --password-stdin
           make push
