--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -72,10 +72,10 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | docker login $IMAGE_REG -u $GITHUB_ACTOR --password-stdin
           make push
 
-      # - name: 'Trigger AKS release pipeline'
-      #   if: github.ref == 'refs/heads/master'
-      #   uses: benc-uk/workflow-dispatch@v1
-      #   with:
-      #     workflow: 'CD Release - AKS'
-      #     token: ${{ secrets.GH_PAT }}
-      #     inputs: '{ "IMAGE_TAG": "${{ env.IMAGE_TAG }}" }'
+      - name: 'Trigger AKS release pipeline'
+        if: github.ref == 'refs/heads/master'
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: 'CD Release - AKS'
+          token: ${{ secrets.GH_PAT }}
+          inputs: '{ "IMAGE_TAG": "${{ env.IMAGE_TAG }}" }'
