--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -14,6 +14,8 @@ env:
 
 permissions:
   packages: write
+  statuses: write
+  checks: write
 
 jobs:
   test:
@@ -21,29 +23,41 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
 
       - name: 'Run linting'
         run: make lint
 
-      - name: 'Run tests'
-        run: make test-report
+      - name: 'Run service'
+        run: make run &
 
-      - name: 'Upload test results'
-        uses: actions/upload-artifact@v2
-        # Disabled when running locally with the nektos/act tool
-        if: ${{ always() }}
+      - name: 'Run tests'
+        run: |
+          sleep 5
+          make test-report
+
+      - name: 'Test reporting'
+        uses: phoenix-actions/test-reporting@v8
+        id: test-report
+        if: success() || failure()
         with:
-          name: test-results
-          path: ./src/mochawesome-report
+          name: Integration Test Report
+          path: test-results.xml
+          reporter: java-junit
+          fail-on-error: false
 
   build:
-    name: 'Build & Push Image'
+    name: 'Build & push image'
     needs: test
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Nicer than using github runid, I think, will be picked up automatically by make
       - name: 'Create datestamp image tag'
@@ -54,7 +68,6 @@ jobs:
 
       # Only when pushing to default branch (e.g. master or main), then push image to registry
       - name: 'Push to container registry'
-        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login $IMAGE_REG -u $GITHUB_ACTOR --password-stdin
           make push
