--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nodejs-demoapp",
   "description": "Node.js Express app for demos",
-  "version": "4.9.7",
+  "version": "4.9.8",
   "author": "Ben Coleman",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=20.0.0"
   },
   "license": "MIT",
   "repository": {
@@ -15,36 +15,32 @@
   "scripts": {
     "start": "node --expose_gc server.mjs",
     "start-bg": "node server.mjs &",
-    "watch": "nodemon --trace-deprecation --experimental-modules",
-    "test-report": "mocha --reporter mochawesome --exit ./tests > test-results.json",
-    "test": "mocha --exit ./tests",
-    "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
-    "lint": "eslint . --ext mjs && prettier --check **/*.mjs",
-    "lint-fix": "eslint . --ext mjs --fix && prettier --write **/*.mjs"
+    "watch": "nodemon",
+    "test-report": "httpyac tests/base-tests.http --all --junit > test-results.xml",
+    "test": "httpyac tests/base-tests.http --all --output short",
+    "lint": "prettier --check **/*.mjs *.mjs",
+    "lint-fix": "eslint . --fix && prettier --write **/*.mjs *.mjs"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.14.1",
-    "applicationinsights": "^2.3.5",
-    "axios": "^0.27.2",
-    "connect-redis": "^6.1.3",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.2",
-    "ejs": "^3.1.8",
-    "express": "~4.18.1",
+    "@azure/msal-node": "^2.15.0",
+    "applicationinsights": "2.9.6",
+    "axios": "^1.7.7",
+    "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "express-prometheus-middleware": "^1.2.0",
-    "express-session": "^1.17.3",
-    "mongodb": "^4.9.1",
-    "morgan": "~1.10.0",
-    "redis": "^4.3.1"
+    "express-session": "^1.18.0",
+    "mongodb": "^6.9.0",
+    "morgan": "^1.10.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.23.1",
-    "eslint-config-prettier": "^8.5.0",
-    "mocha": "^10.0.0",
-    "mochawesome": "^7.1.3",
-    "newman": "^5.3.2",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
-    "supertest": "^6.2.4"
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "httpyac": "^6.15.1",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
