Redis fixes, remove legacy option

--- a/deploy/kubernetes/redis.yaml
+++ b/deploy/kubernetes/redis.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: redis:6
+          image: redis
           ports:
             - containerPort: 6379
           resources:
