Update .env.sample and README for clarity; add Redis session note and fix typo in test documentation

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -19,3 +19,7 @@
 # ==================================================================
 #ENTRA_APP_ID=
 
+# ==================================================================
+# Shared sessions, only needed if running multiple instances
+# ==================================================================
+#REDIS_SESSION_HOST=
